--- a/public/index.html
+++ b/public/index.html
@@ -6,88 +6,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
   <link rel="stylesheet" href="styles/bootstrap-material-design.min.css">
+  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/5.0.0/firebase-ui-auth.css" />
   <link rel="stylesheet" href="styles/main.css">
   <title>FoodFinder</title>
 </head>
 
 <body>
-  <!-- <nav class="navbar navbar-dark fixed-top">
-    <a class="navbar-brand" href="#">FoodFinder</a>
+  <nav class="navbar navbar-dark fixed-top">
+    <a class="navbar-brand" href="#">Food Finder</a>
   </nav>
+  <div id="loginPage" class="container page-container">
+    <div id="firebaseui-auth-container"></div>
+   </div>
+   <hr>
+   
+   <div class="d-flex justify-content-center">
+    <button id="roseFireButton" type="button" class="btn">Sign in with Rosefire</button>
+   </div>
 
-  <div id="mainPage" class="container page-container">
-  </div> -->
-  <div class="bmd-layout-container bmd-drawer-f-l bmd-drawer-overlay">
-    <header id="topBar" class="bmd-layout-header">
-      <div class="navbar navbar-dark bg-faded">
-        <button class="navbar-toggler" type="button" data-toggle="drawer" data-target="#dw-s2">
-          <i id="menu" class="material-icons">menu</i>
-        </button>
-        <div id="searchBar" class="ml-auto">
-          <button id="clearbutton">Clear</button>
-          <input id="searchcontent" type="text">
-          <button id="searchbutton">Search</button>
-        </div>
-      </div>
-    </header>
+  
+  
 
-    <div id="dw-s2" class="bmd-layout-drawer bg-faded">
-      <header>
-        <a id="topWord" class="navbar-brand">FoodFinder</a>
-      </header>
-      <ul class="list-group">
-        <a id="menuShowRestaurants" class="list-group-item"> <i class="material-icons">restaurant</i> Show All
-          Restaurants</a>
-        <a id="menuApplyFilters" class="list-group-item"> <i class="material-icons">filter_list</i> Apply Filters</a>
-        <a id="menuShowFavorites" class="list-group-item"> <i class="material-icons">person</i>Show Favorites</a>
-        <a id="menuUserInfo" class="list-group-item" data-toggle="modal" data-target="#showUserInfoDialog"> <i
-          class="material-icons">account_circle</i>Account Information</a>
-        <a id="menuSignOut" class="list-group-item"> <i class="material-icons">login</i>Sign Out</a>
-      </ul>
-    </div>
+    
 
-    <main class="bmd-layout-content">
-      <div id="MainPage" class="container page-container">
-        <div id="restaurantListContainer"></div>
 
-      </div>
-    </main>
-  </div>
 
-  <button id="fab" type="button" class="btn bmd-btn-fab" data-toggle="modal" data-target="#addRestaurantDialog">
-    <i class="material-icons">add</i>
-  </button>
-  <!-- Modal -->
-  <div class="modal fade" id="addRestaurantDialog" tabindex="-1" role="dialog" aria-labelledby="Add restaurant dialog"
-    aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Add A New Restaurant</h4>
-        </div>
-        <div class="modal-body">
-          <div class="form-group bmd-form-group">
-            <label for="inputTitle" class="bmd-label-floating">Restaurant Title</label>
-            <input type="text" class="form-control" id="inputTitle">
-          </div>
-          <div class="form-group bmd-form-group">
-            <label for="inputVideoLink" class="bmd-label-floating">Link</label>
-            <input type="text" class="form-control" id="inputVideoLink">
-          </div>
-
-          <div class="form-group bmd-form-group">
-            <label for="contentTextarea">Description</label>
-            <textarea class="form-control" id="contentTextarea" rows="10"></textarea>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">CANCEL</button>
-          <button id="submitAddRestaurant" type="button" class="btn btn-primary" data-dismiss="modal">CREATE</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
+ 
 
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/popper.js"></script>
@@ -97,7 +41,10 @@
   <script src="/__/firebase/7.18.0/firebase-analytics.js"></script>
   <script src="/__/firebase/7.18.0/firebase-auth.js"></script>
   <script src="/__/firebase/7.18.0/firebase-firestore.js"></script>
+  <script src="/__/firebase/7.18.0/firebase-auth.js"></script>
   <script src="/__/firebase/init.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/5.0.0/firebase-ui-auth.js"></script>
+  <script src="scripts/rosefire.min.js"></script>
   <script src="scripts/main.js"></script>
 </body>
 
