detail page is functional

--- a/public/list.html
+++ b/public/list.html
@@ -42,6 +42,7 @@
         <a id="menuShowFavorites" class="list-group-item"> <i class="material-icons">person</i>Show Favorites</a>
         <!-- <a id="menuUserInfo" class="list-group-item" data-toggle="modal" data-target="#showUserInfoDialog"> <i
           class="material-icons">account_circle</i>Account Information</a> -->
+        <a id="menuAddRestaurant" class="list-group-item" data-toggle="modal" data-target="#addRestaurantDialog"> <i class="material-icons">add</i>Add a Restaurant</a>
         <a id="menuSignOut" class="list-group-item"> <i class="material-icons">login</i>Sign Out</a>
       </ul>
     </div>
@@ -54,9 +55,6 @@
     </main>
   </div>
 
-  <button id="fab" type="button" class="btn bmd-btn-fab" data-toggle="modal" data-target="#addRestaurantDialog">
-    <i class="material-icons">add</i>
-  </button>
   <!-- Modal -->
   <div class="modal fade" id="addRestaurantDialog" tabindex="-1" role="dialog" aria-labelledby="Add restaurant dialog"
     aria-hidden="true">
