--- a/public/restaurant.html
+++ b/public/restaurant.html
@@ -45,52 +45,51 @@
   <div id="detailPage" class="container page-container">
     <div class="card">
       <div class="card-body">
-        <img id="cardLink" class="card-title img-fluid center" src="">
-        <h6 id="cardCaption" class="card-subtitle mb-2 text-muted">Please Wait</h6>
+        <h5 id="cardTitle" class="card-title">Loading...</h5>
+        <h6 id="cardMenuLink" class="card-subtitle mb-2 text-muted">Please Wait</h6>
+        <h6 id="cardLocationLink" class="card-subtitle mb-2 text-muted"></h6>
+        <p id="cardDescription" class="card-subtitle mb-2 text-muted"></p>
+        
       </div>
     </div>
 </div>
   </div>
 
 <!-- Modal -->
-<div class="modal fade" id="editRestaurantDialog" tabindex="-1" role="dialog" aria-labelledby="Edit Restaurant caption dialog" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Edit Restaurant Information</h5>
 
-      </div>
-      <div class="modal-body">
-
+  <div class="modal fade" id="editRestaurantDialog" tabindex="-1" role="dialog" aria-labelledby="Edit restaurant dialog"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Edit This Restaurant</h4>
+        </div>
+        <div class="modal-body">
           <div class="form-group bmd-form-group">
-            <label for="exampleInputPassword1" class="bmd-label-floating">Restaurant Name</label>
-            <input type="text" class="form-control" id="inputCaption" placeholder="">
-            <!-- <span class="bmd-help">What is this a Restaurant of?</span> -->
+            <label for="inputTitle" class="bmd-label-floating">Restaurant Name</label>
+            <input type="text" class="form-control" id="inputTitle">
           </div>
           <div class="form-group bmd-form-group">
-            <label for="exampleInputPassword1" class="bmd-label-floating">Link to Menu</label>
-            <input type="text" class="form-control" id="inputCaption" placeholder="">
-            <!-- <span class="bmd-help">What is this a Restaurant of?</span> -->
+            <label for="inputMenuLink" class="bmd-label-floating">Link to Menu</label>
+            <input type="text" class="form-control" id="inputMenuLink">
           </div>
           <div class="form-group bmd-form-group">
-            <label for="exampleInputPassword1" class="bmd-label-floating">Link to Maps</label>
-            <input type="text" class="form-control" id="inputCaption" placeholder="">
-            <!-- <span class="bmd-help">What is this a Restaurant of?</span> -->
-          </div>
-          <div class="form-group bmd-form-group">
-            <label for="exampleInputPassword1" class="bmd-label-floating">Description</label>
-            <input type="text" class="form-control" id="inputCaption" placeholder="">
-            <!-- <span class="bmd-help">What is this a Restaurant of?</span> -->
+            <label for="inputMapsLink" class="bmd-label-floating">Link to Maps</label>
+            <input type="text" class="form-control" id="inputMapsLink">
           </div>
 
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">CANCEL</button>
-        <button id="submitEditRestaurant" type="submitEditRestaurant" class="btn btn-primary"data-dismiss="modal">UPDATE</button>
+          <div class="form-group bmd-form-group">
+            <label for="contentTextarea">Description</label>
+            <textarea class="form-control" id="inputDescription" rows="10"></textarea>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">CANCEL</button>
+          <button id="submitEditRestaurant" type="button" class="btn btn-primary" data-dismiss="modal">SUBMIT</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
 <div class="modal fade" id="deleteRestaurantDialog" tabindex="-1" role="dialog" aria-labelledby="Delete Restaurant dialog" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
