--- a/public/restaurant.html
+++ b/public/restaurant.html
@@ -46,8 +46,9 @@
     <div class="card">
       <div class="card-body">
         <h5 id="cardTitle" class="card-title">Loading...</h5>
-        <h6 id="cardMenuLink" class="card-subtitle mb-2 text-muted">Please Wait</h6>
-        <h6 id="cardLocationLink" class="card-subtitle mb-2 text-muted"></h6>
+        <a id="cardMenuLink" class="btn btn-outline" target="_blank">Link to Menu</a>
+        <a id="cardLocationLink" class="btn btn-outline" target="_blank">Get Directions</a>
+        <img id="cardImageLink">
         <p id="cardDescription" class="card-subtitle mb-2 text-muted"></p>
         
       </div>
@@ -76,6 +77,10 @@
           <div class="form-group bmd-form-group">
             <label for="inputMapsLink" class="bmd-label-floating">Link to Maps</label>
             <input type="text" class="form-control" id="inputMapsLink">
+          </div>
+          <div class="form-group bmd-form-group">
+            <label for="inputImageLink" class="bmd-label-floating">Link to Image</label>
+            <input type="text" class="form-control" id="inputImageLink">
           </div>
 
           <div class="form-group bmd-form-group">
