--- a/public/list.html
+++ b/public/list.html
@@ -76,6 +76,26 @@
             <label for="inputMapsLink" class="bmd-label-floating">Link to Maps</label>
             <input type="text" class="form-control" id="inputMapsLink">
           </div>
+          <div class="form-group bmd-form-group">
+            <label for="inputImageLink" class="bmd-label-floating">Link to Image</label>
+            <input type="text" class="form-control" id="inputImageLink">
+          </div>
+
+          <div>
+            <select id="inputCategory" class="form-select" aria-label="Default select example">
+              <option selected>-Specify Category-</option>
+              <option value="1">Chinese</option>
+              <option value="2">Indian</option>
+              <option value="3">Italian</option>
+            </select>
+  
+            <select id="inputPrice" class="form-select" aria-label="Default select example">
+              <option selected>-Specify Pricepoint-</option>
+              <option value="1">$</option>
+              <option value="2">$$</option>
+              <option value="3">$$$</option>
+            </select>
+            </div>
 
           <div class="form-group bmd-form-group">
             <label for="contentTextarea">Description</label>
