--- a/public/restaurant.html
+++ b/public/restaurant.html
@@ -14,13 +14,13 @@
   <nav class="navbar navbar-dark fixed-top">
       <div class="mr-auto">
         <button class="btn bmd-btn-icon" type="button" id="back-btn">
-            <i class="material-icons"href="/list.html">arrow_left</i>
+            <i class="material-icons" href="/list.html">arrow_left</i>
           </button>
     
-        <a class="navbar-brand" href="/list.html">Restaurant Details</a>
+        <a class="navbar-brand" ">Restaurant Details</a>
     
         <button class="btn bmd-btn-icon" type="button" id="favorite-btn">
-            <i class="material-icons">star</i>
+            <i class="material-icons">star</i>&nbsp;add to favorites
           </button>
 
 
@@ -88,17 +88,19 @@
 
           <div>
           <select id="inputCategory" class="form-select" aria-label="Default select example">
-            <option selected>-Specify Category-</option>
-            <option value="1">Chinese</option>
-            <option value="2">Indian</option>
-            <option value="3">Italian</option>
+            <option value="">-Specify Category-</option>
+            <option value="Chinese">Chinese</option>
+              <option value="Indian">Indian</option>
+              <option value="Italian">Italian</option>
+              <option value="Fast Food">Fast Food</option>
+              <option value="Other">Other</option>
           </select>
 
           <select id="inputPrice" class="form-select" aria-label="Default select example">
-            <option selected>-Specify Pricepoint-</option>
-            <option value="1">$</option>
-            <option value="2">$$</option>
-            <option value="3">$$$</option>
+            <option value="">-Specify Pricepoint-</option>
+              <option value="$">$</option>
+              <option value="$$">$$</option>
+              <option value="$$$">$$$</option>
           </select>
           </div>
           <div class="form-group bmd-form-group">
