--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
     <div id="firebaseui-auth-container"></div>
    </div>
    <hr>
-   
+<div id="welcome_box">
+   <h1>Welcome to Food Finder!</h1>
+   <p>Food Finder provides all the menus for the best restaurants in Terre Haute, and helps you decide which restaurant you'd like to try with a variety of tools for searching and sorting restaurants. Food Finder is an exclusive for Rose-Hulman affiliates, so sign in with your Rose-Hulman credentials below:</p>
+   </div>
    <div class="d-flex justify-content-center">
     <button id="roseFireButton" type="button" class="btn">Sign in with Rosefire</button>
    </div>
